@@ -1,3 +1,6 @@
+  06 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-9999.ebuild:
+  add some more java dependencies, add config note
+
   04 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> files/ovirt-engine.init.d:
   sync init.d script
 
